yamls/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
    
spec:
  host: redis-default.apps.openshift.istnetworks.com
  to:
    kind: Service
    name: redis
    weight: 100
  port:
    targetPort: '6379'
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
